[gd_scene load_steps=6 format=2]

[ext_resource path="res://Recursos/Sprites/Evitable/Nucleo_picos_giratorio.jpg" type="Texture" id=1]
[ext_resource path="res://Escenas/Items_frontend/Evitable/Pico.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Items/Evitable/Picos_giratorios_logica.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Items/Evitable/Picos_giratorios.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="Picos_giratorios" type="KinematicBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Cuerpo" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Cuerpo"]
texture = ExtResource( 1 )

[node name="Pico" parent="Cuerpo" instance=ExtResource( 2 )]
position = Vector2( 0, -40 )

[node name="Pico2" parent="Cuerpo" instance=ExtResource( 2 )]
position = Vector2( 0, 40 )
rotation = -3.14159

[node name="Pico3" parent="Cuerpo" instance=ExtResource( 2 )]
position = Vector2( 40, 0 )
rotation = 1.5708

[node name="Pico4" parent="Cuerpo" instance=ExtResource( 2 )]
position = Vector2( -40, 0 )
rotation = -1.5708

[node name="ray_izq" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 22 )

[node name="ray_der" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 22 )

[node name="ray_arriba" type="RayCast2D" parent="."]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 24 )

[node name="ray_abajo" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
